Initial commit - working ChatPoint app with HTTPS

--- a/index.html
+++ b/index.html
@@ -82,15 +82,14 @@
 
   <!-- MAIN APP LOGIC -->
   <script>
-    const shops = [
-      { name: "7th Wonder (Cake)", img: "images/7th-wonder.png", rating: 4.8, desc: "Heavenly cakes & custom desserts.", items: ["Chocolate Cake","Red Velvet","Cupcakes","Birthday Special"] },
+    const shops = [ 
       { name: "Sangambar Udpi-Hotel", img: "images/sangambar-udpi-hotel.png", rating: 4.6, desc: "Pure vegetarian South Indian meals.", items: ["Masala Dosa","Idli Vada","Puri Bhaji","Filter Coffee"] },
       { name: "Nandini Grand Hotels", img: "images/nandini-grand-hotels.png", rating: 4.7, desc: "Crispy dosas with authentic flavors.", items: ["Plain Dosa","Ghee Roast","Onion Uttapam","Podi Idli"] },
-      { name: "Pizza Point", img: "https://images.unsplash.com/photo-1513104890138-7c749659a591?w=500", rating: 4.5, desc: "Loaded pizzas with fresh toppings.", items: ["Margherita","Pepperoni","Veggie Supreme","BBQ Chicken"] },
+      { name: "Pizza spot", img: "https://images.unsplash.com/photo-1513104890138-7c749659a591?w=500", rating: 4.5, desc: "Loaded pizzas with fresh toppings.", items: ["Margherita","Pepperoni","Veggie Supreme","BBQ Chicken"] },
       { name: "Fly Pizza", img: "https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=500", rating: 4.6, desc: "100% veg pizzas, light & tasty.", items: ["Paneer Tikka","Corn & Cheese","Farmhouse","Veg Extravaganza"] },
-      { name: "Mister Chef", img: "https://images.unsplash.com/photo-1565299507177-b0ac66763828?w=500", rating: 4.7, desc: "Juicy burgers with secret sauce.", items: ["Classic Burger","Cheese Blast","Veg Crunch","Fries Combo"] },
+      { name: "Mister Chef", img: "mister-chef.png", rating: 4.7, desc: "Juicy burgers with secret sauce.", items: ["Classic Burger","Cheese Blast","Veg Crunch","Fries Combo"] },
       { name: "Bekary", img: "images/Bekary.png", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich","Grilled Cheese","Club Sandwich","Cold Coffee"] },
-      { name: "Dolphin", img: "images/dolphin.png", rating: 4.8, desc: "Tandoori, kebabs & non-veg specials.", items: ["Chicken Tandoori","Mutton Biryani","Fish Fry","Kebab Platter"] }
+      { name: "chat-spot", img: "images/dolphin.png", rating: 4.8, desc: "Tandoori, kebabs & non-veg specials.", items: ["Chicken Tandoori","Mutton Biryani","Fish Fry","Kebab Platter"] }
     ];
 
     function renderShops(filter=""){
