--- a/items.html
+++ b/items.html
@@ -194,15 +194,69 @@
     // ============== SHOP DATA (FIXED TYPO: "Idli ") ==============
     const shopData = {
       "7th Wonder (Cake)": [
-        { name: "Chocolate Truffle Cake", price: 350 },
-        { name: "Red Velvet Cake", price: 380 },
-        { name: "Black Forest", price: 320 }
+        { name: "Chocolate Truffle Cake", price: 380 },
+        { name: "Red Velvet Cake", price: 400 },
+        { name: "Black Forest", price: 350 }
       ],
       "Sangambar Udpi-Hotel": [
-        { name: "Masala Dosa", price: 75 },
-        { name: "Plain Dosa", price: 60 },
-        { name: "Idli", price: 55 },  // ← Fixed space
-        { name: "Vada", price: 45 }
+      // SOUPS
+{ name: "Tomato Soup", price: 105 },
+{ name: "Sweet Corn Soup", price: 95 },
+{ name: "Veg Clear Soup", price: 95 },
+{ name: "Cream Mushroom Soup", price: 95 },
+{ name: "Manchow Soup", price: 105 },
+{ name: "Hot and Sour Soup", price: 105 },
+
+// NORTH INDIAN FOODS
+{ name: "Papad", price: 85 },
+{ name: "Gobi 65", price: 135 },
+{ name: "Gobi Manchurian", price: 125 },
+{ name: "Mushroom Manchurian", price: 185 },
+{ name: "Paneer Manchurian", price: 205 },
+{ name: "Paneer Chilli", price: 195 },
+{ name: "Mushroom Chilli", price: 185 },
+{ name: "Paneer Tikka", price: 205 },
+{ name: "Veg Manchurian", price: 105 },
+
+// CHATS
+{ name: "Vada Pav (Plate)", price: 65 },
+{ name: "Vada Pav (Single)", price: 45 },
+{ name: "Pani Puri", price: 55 },
+{ name: "Masala Puri", price: 75 },
+{ name: "Belpuri", price: 65 },
+{ name: "Sevpuri", price: 75 },
+{ name: "Dahi Puri", price: 85 },
+{ name: "Single Samosa", price: 45 },
+{ name: "Samosa Masala", price: 65 },
+{ name: "Pav Bhaji", price: 85 },
+{ name: "Extra Pav", price: 20 },
+{ name: "Finger Chips", price: 125 },
+
+// SOUTH INDIAN / BREAKFAST
+{ name: "Idli 2 Pieces", price: 65 },
+{ name: "Vada (Single)", price: 55 },
+{ name: "Curd Vada", price: 85 },
+{ name: "Khara Bath", price: 55 },
+{ name: "Kesari Bath", price: 65 },
+{ name: "Chow Chow Bath", price: 85 },
+{ name: "Rice Bath", price: 75 },
+{ name: "Set Dosa", price: 95 },
+{ name: "Idli Vada ", price: 85 },
+{ name: "Idli Vada ", price: 75 },
+{ name: "Mosar Avalakki", price: 75 },
+{ name: "Buns", price: 55 },
+{ name: "Plain Dosa", price: 85 },
+{ name: "Masala Dosa", price: 95 },
+{ name: "Onion Utthappa", price: 95 },
+{ name: "Rava Dosa", price: 105 },
+{ name: "Tomato Omelette", price: 105 },
+{ name: "Paper Masala Dosa", price: 135 },
+{ name: "Benne Dosa", price: 95 },
+{ name: "Benne Masala Dosa", price: 115 },
+{ name: "Mysore Masala Dosa", price: 115 },
+{ name: "Paneer Masala Dosa", price: 115 },
+
+
       ],
       "Nandini Grand Hotels": [
         { name: "Shira", price: 35 },
@@ -217,20 +271,112 @@
         { name: "Cheese Dosa", price: 75 },
         { name: "Chou Chou Bath", price: 70 }
       ],
-      "Pizza Point": [
-        { name: "Margherita", price: 99 },
-        { name: "Pepperoni", price: 149 }
+      "Pizza spot": [
+      // VEG VICTORY
+{ name: "Nuggets", price: 85 },
+{ name: "French Fries", price: 95 },
+{ name: "Masala Fries", price: 105 },
+{ name: "Smiley Fries", price: 105 },
+{ name: "Pizza Spot Special", price: 165 },
+
+// BURGER
+{ name: "Burger Classic", price: 85 },
+{ name: "Aloo Tikki Burger", price: 85 },
+{ name: "Paneer Burger", price: 95 },
+{ name: "Double Decker Burger", price: 125 },
+{ name: "Pizza Spot Special Burger", price: 165 },
+
+// PIZZA
+{ name: "Margherita", price: 154 },
+{ name: "Veggie", price: 174 },
+{ name: "Veggie Lover", price: 204 },
+{ name: "Sweet Corn", price: 204 },
+{ name: "Baby Corn", price: 224 },
+{ name: "Tandoori Paneer", price: 235 },
+
+
+// MOMOS
+{ name: "Steam Momos", price: 75 },
+{ name: "Fried Momos", price: 85 },
+{ name: "Kurkure Momos", price: 105 },
+
+// SANDWICH
+{ name: "Veg Sandwich", price: 75 },
+{ name: "Cheese Sandwich", price: 85 },
+{ name: "Sweet Corn Sandwich", price: 85 },
+{ name: "Masala Sandwich", price: 85 },
+{ name: "Paneer Tandoori Sandwich", price: 95 },
+{ name: "Club Sandwich", price: 125 },
+{ name: "Pizza Spot Special Sandwich", price: 145 },
+
+// PAV BHAJI
+{ name: "Pav Bhaji", price: 65 },
+{ name: "Cheese Pav Bhaji", price: 85 },
+
+// VEG ROLLS
+{ name: "Veg Roll", price: 75 },
+{ name: "Sweet Corn Roll", price: 95 },
+{ name: "Paneer Roll", price: 105 }
       ],
       "Fly Pizza": [
-        { name: "Veggie Delight", price: 129 },
-        { name: "Margherita", price: 99 }
+       { name: "Delight Burger Veg", price: 99 },
+{ name: "BBQ Burger Veg", price: 109 },
+{ name: "Tandoori Burger Veg", price: 119 },
+{ name: "Makhani Burger Veg", price: 119 },
+{ name: "Paneer Tikka Burger", price: 159 },
+
+{ name: "Chicken Delight Burger", price: 119 },
+{ name: "BBQ Chicken Burger", price: 129 },
+{ name: "Tandoori Chicken Burger", price: 149 },
+{ name: "Chicken Makhani Burger", price: 159 },
+{ name: "Chicken Tikka Burger", price: 169 },
+
+{ name: "Delight Masala Sandwich (Veg)", price: 109 },
+{ name: "Tandoori Paneer Sandwich", price: 119 },
+{ name: "Sauth Grilled Sandwich (Veg)", price: 119 },
+{ name: "Spacial Paneer Sandwich", price: 139 },
+
+{ name: "Delight Chicken Masala Sandwich", price: 129 },
+{ name: "Tandoori Chicken Sandwich", price: 149 },
+{ name: "Sauth Grilled Chicken Sandwich", price: 149 },
+{ name: "Spacial Chicken Sandwich", price: 169 },
+{ name: "Creamy Alfredo Pasta Veg", price: 199 },
+{ name: "Red Sauce Pasta Veg", price: 209 },
+{ name: "White Sauce Pasta Veg", price: 209 },
+{ name: "Peri Peri Pasta Veg", price: 249 },
+
+{ name: "Creamy Chicken Alfredo Pasta", price: 209 },
+{ name: "Red Sauce Chicken Pasta", price: 229 },
+{ name: "White Sauce Chicken Pasta", price: 229 },
+{ name: "Peri Peri Chicken Pasta", price: 269 }
+        
+
       ],
       "Mister Chef": [
         { name: "Classic Burger", price: 120 },
         { name: "French Fries", price: 99 }
       ],
       "Bekary": [
-        { name: "Veg Sandwich", price: 80 }
+        // === PIZZA ===
+{ name: "Veg Pizza", price: 170 },
+{ name: "Margherita Pizza", price: 160 },
+{ name: "Paneer Pizza", price: 220 },
+{ name: "Golden Corn Pizza", price: 229 },
+{ name: "Sweet Corn Pizza", price: 220 },
+{ name: "Baby Corn Pizza", price: 220 },
+
+// === BURGER ===
+{ name: "Classic Veg Burger", price: 80 },
+{ name: "Cheese Burger", price: 90 },
+{ name: "Paneer Tandoori Burger", price: 90 },
+{ name: "Classic Burger", price: 140 },
+
+// === SANDWICH & ROLLS ===
+{ name: "Cheese Sandwich", price: 80 },
+{ name: "Veg Sandwich", price: 70 },
+{ name: "Veg Roll", price: 50 },
+{ name: "Egg Roll", price: 50 },
+{ name: "Cheese Roll", price: 55 }
       ],
       "Dolphin": [
         { name: "Chicken Tandoori", price: 280 }
@@ -289,7 +435,7 @@
       const slug = itemName
         .toLowerCase()
         .replace(/[^a-z0-9]+/g, '-')
-        .replace(/^-+|-+$/g, '');
+        .replace(/^-+|-+$/g, '');   
       return `images/${slug}.jpg`;
     }
 
