--- a/user-house.html
+++ b/user-house.html
@@ -221,7 +221,7 @@
       <div class="card" onclick="openCart('Pizza Point')">
         <img src="images/pizza-point.png" alt="Pizza Point">
         <div class="info">
-          <div class="shop-name">Pizza Point</div>
+          <div class="shop-name">Pizza spot</div>
           <div class="rating"><i class="fas fa-star"></i> 4.5</div>
         </div>
         <div class="desc">Loaded pizzas with fresh toppings.</div>
