--- a/payment.html
+++ b/payment.html
@@ -1,58 +1,243 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Payment | Chat Point</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
+  <title>Checkout | Chat Point</title>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <style>
-    :root {--bg1:#071021;--bg2:#0b2236;--card:rgba(255,255,255,0.04);--text:#eaf0f2;--muted:#b8a78f;--accent-fresh:#2ecf7b;--accent-warm:#ff8a3d;--radius:18px;}
-    *{box-sizing:border-box;margin:0;padding:0;}
-    body{font-family:'Outfit',sans-serif;background:linear-gradient(135deg,#0a0f2c 0%,#0f1a38 100%);color:var(--text);min-height:100vh;padding:20px 20px 100px;}
-    .container{max-width:560px;margin:auto;background:var(--card);border-radius:var(--radius);padding:24px;border:1px solid rgba(255,255,255,.08);backdrop-filter:blur(12px);}
-    h2{margin-bottom:16px;font-weight:700;color:var(--accent-fresh);}
-    label{display:block;margin-top:12px;font-weight:600;}
-    input[type=text],input[type=tel]{width:100%;padding:10px 12px;margin-top:6px;border-radius:10px;border:1px solid rgba(255,255,255,.2);background:rgba(255,255,255,.06);color:white;}
-    .radio-group{margin:16px 0;}
-    .radio-group label{display:inline;margin-right:20px;}
-    .shop-section{margin-top:20px;}
-    .shop-title{font-size:18px;font-weight:700;color:var(--accent-fresh);display:flex;align-items:center;gap:8px;margin-bottom:10px;}
-    .item-line{display:flex;justify-content:space-between;font-size:15px;padding:4px 0;border-bottom:1px dashed rgba(255,255,255,.1);}
-    .total-line{display:flex;justify-content:space-between;font-weight:700;margin-top:8px;}
-    button.main-btn{margin-top:24px;width:100%;padding:14px;background:linear-gradient(90deg,var(--accent-fresh),var(--accent-warm));color:black;font-weight:800;border:none;border-radius:14px;cursor:pointer;font-size:16px;}
-    button.main-btn:disabled{opacity:.5;cursor:not-allowed;}
-    .error-msg,.success-msg,.surprise-msg{font-size:14px;margin-top:8px;}
-    .error-msg{color:#ff6b6b;}
-    .success-msg{color:var(--accent-fresh);}
-    .surprise-msg{color:#ffd700;font-weight:700;text-align:center;margin:12px 0;font-size:16px;animation:pulse 1.5s infinite;}
-    @keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.05)}100%{transform:scale(1)}}
-    .login-prompt{text-align:center;padding:40px 20px;color:#aaa;}
-    .login-prompt a{color:var(--accent-warm);text-decoration:none;font-weight:600;}
+    :root {
+      --bg: #0a0a0a;
+      --card: #111111;
+      --border: #222222;
+      --text: #e0e0e0;
+      --muted: #888888;
+      --accent: #00ff9d;
+      --accent2: #ff2e63;
+      --glow: 0 0 20px rgba(0, 255, 157, 0.3);
+    }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Outfit', sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      min-height: 100vh;
+      background-image: 
+        radial-gradient(circle at 20% 80%, rgba(0, 255, 157, 0.08) 0%, transparent 50%),
+        radial-gradient(circle at 80% 20%, rgba(255, 46, 99, 0.08) 0%, transparent 50%);
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    /* Floating SVG Decorations */
+    .floating-svg {
+      position: absolute;
+      opacity: 0.07;
+      pointer-events: none;
+      animation: float 20s infinite linear;
+      z-index: 0;
+    }
+    @keyframes float {
+      0% { transform: translateY(0) rotate(0deg); }
+      100% { transform: translateY(-100vh) rotate(360deg); }
+    }
+
+    .container {
+      max-width: 480px;
+      margin: 20px auto;
+      padding: 24px;
+      background: var(--card);
+      border-radius: 24px;
+      border: 1px solid var(--border);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.6), var(--glow);
+      position: relative;
+      z-index: 10;
+      backdrop-filter: blur(16px);
+    }
+
+    h2 {
+      font-size: 28px;
+      font-weight: 800;
+      text-align: center;
+      background: linear-gradient(90deg, var(--accent), var(--accent2));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 24px;
+      position: relative;
+    }
+    h2::after {
+      content: '';
+      position: absolute;
+      bottom: -8px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60px;
+      height: 4px;
+      background: linear-gradient(90deg, var(--accent), var(--accent2));
+      border-radius: 2px;
+    }
+
+    label {
+      display: block;
+      margin-top: 16px;
+      font-weight: 600;
+      font-size: 14px;
+      color: var(--accent);
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    label i { font-size: 18px; animation: pulse 2s infinite; }
+
+    input[type=text], input[type=tel] {
+      width: 100%;
+      padding: 14px 16px;
+      margin-top: 8px;
+      border-radius: 16px;
+      border: 1px solid #333;
+      background: #1a1a1a;
+      color: white;
+      font-size: 16px;
+      transition: all 0.3s;
+    }
+    input:focus {
+      outline: none;
+      border-color: var(--accent);
+      box-shadow: var(--glow);
+      transform: scale(1.02);
+    }
+
+    .radio-group {
+      margin: 24px 0;
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+    }
+    .radio-group label {
+      color: var(--text);
+      font-weight: 500;
+      cursor: pointer;
+      padding: 10px 20px;
+      border-radius: 12px;
+      background: #1a1a1a;
+      transition: 0.3s;
+    }
+    .radio-group input:checked + label {
+      background: linear-gradient(135deg, var(--accent), var(--accent2));
+      color: black;
+      font-weight: 700;
+      transform: scale(1.05);
+    }
+
+    .shop-section {
+      margin-top: 28px;
+      background: #181818;
+      border-radius: 18px;
+      padding: 16px;
+      border: 1px solid #252525;
+    }
+    .shop-title {
+      font-size: 18px;
+      font-weight: 700;
+      color: var(--accent);
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 12px;
+    }
+    .shop-title i { animation: bounce 2s infinite; }
+
+    .item-line {
+      display: flex;
+      justify-content: space-between;
+      padding: 8px 0;
+      font-size: 15px;
+      border-bottom: 1px dashed #333;
+    }
+    .total-line {
+      display: flex;
+      justify-content: space-between;
+      font-weight: 700;
+      margin-top: 12px;
+      font-size: 17px;
+    }
+
+    .surprise-msg {
+      text-align: center;
+      padding: 16px;
+      background: linear-gradient(135deg, rgba(0,255,157,0.1), rgba(255,46,99,0.1));
+      border: 1px dashed var(--accent);
+      border-radius: 16px;
+      margin: 20px 0;
+      font-weight: 700;
+      color: var(--accent);
+      animation: pulse 2s infinite;
+    }
+
+    button.main-btn {
+      margin-top: 32px;
+      width: 100%;
+      padding: 18px;
+      background: linear-gradient(90deg, var(--accent), var(--accent2));
+      color: black;
+      font-weight: 800;
+      font-size: 18px;
+      border: none;
+      border-radius: 20px;
+      cursor: pointer;
+      box-shadow: 0 10px 30px rgba(0, 255, 157, 0.4);
+      transition: all 0.4s;
+      position: relative;
+      overflow: hidden;
+    }
+    button.main-btn::before {
+      content: '';
+      position: absolute;
+      top: 0; left: -100%;
+      width: 100%; height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
+      transition: 0.7s;
+    }
+    button.main-btn:hover::before { left: 100%; }
+    button.main-btn:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 20px 40px rgba(0, 255, 157, 0.6);
+    }
+
+    .error-msg { color: #ff6b6b; text-align: center; margin: 12px 0; }
+    .success-msg { color: var(--accent); text-align: center; font-weight: 700; font-size: 18px; }
+
+    @keyframes pulse { 0%,100% { opacity: 0.8; } 50% { opacity: 1; } }
+    @keyframes bounce { 0%,100% { transform: translateY(0); } 50% { transform: translateY(-5px); } }
+
+    /* Mobile Optimization */
+    @media (max-width: 480px) {
+      .container { margin: 10px; padding: 20px; border-radius: 20px; }
+      h2 { font-size: 24px; }
+      .radio-group { flex-direction: column; align-items: center; }
+    }
   </style>
 </head>
 <body>
 
-<div class="container" id="mainContainer"></div>
+  <!-- Floating Animated SVGs -->
+  <svg class="floating-svg" style="top:10%;left:5%;width:120px" viewBox="0 0 200 200"><path fill="#00ff9d" opacity="0.3" d="M100,20 L120,80 L180,80 L130,120 L150,180 L100,140 L50,180 L70,120 L20,80 L80,80 Z"/></svg>
+  <svg class="floating-svg" style="top:30%;right:10%;width:80px;animation-delay:3s" viewBox="0 0 200 200"><circle fill="#ff2e63" opacity="0.3" cx="100" cy="100" r="80"/></svg>
+  <svg class="floating-svg" style="bottom:20%;left:15%;width:100px;animation-delay:7s" viewBox="0 0 200 200"><polygon fill="#00ff9d" opacity="0.2" points="100,20 140,100 100,180 60,100"/></svg>
+
+  <div class="container" id="mainContainer"></div>
 
 <script>
   const CART_KEY = "chatpoint_cart";
   const USER_KEY = "chatpoint_user";
-
-  // REAL BACKEND: Use same origin
   const API_BASE = window.location.origin;
 
   function checkLogin() {
     const user = JSON.parse(localStorage.getItem(USER_KEY) || "null");
     if (!user || !user._id) {
-      document.getElementById("mainContainer").innerHTML = `
-        <div class="login-prompt">
-          <h3>Please log in to place an order</h3>
-          <p><a href="login.html">Go to Login</a></p>
-        </div>`;
+      document.getElementById("mainContainer").innerHTML = `<div style="text-align:center;padding:60px;color:#888"><h3>Login Required</h3><p><a href="login.html" style="color:var(--accent);font-weight:700">Go to Login</a></p></div>`;
       return null;
     }
     return user;
@@ -60,23 +245,23 @@
 
   function renderForm(user) {
     document.getElementById("mainContainer").innerHTML = `
-      <h2>Payment Details</h2>
+      <h2>Secure Checkout</h2>
+      <label><i class="fas fa-user"></i> Full Name <span style="color:#ff6b6b">*</span></label>
+      <input type="text" id="name" placeholder="John Doe" value="${user.name || ''}" required />
 
-      <label>Name <span style="color:#ff6b6b">*</span></label>
-      <input type="text" id="name" placeholder="Enter your full name" value="${user.name || ''}" required />
+      <label><i class="fas fa-phone"></i> Phone Number <span style="color:#ff6b6b">*</span></label>
+      <input type="tel" id="phone" placeholder="9876543210" value="${user.phone || ''}" required />
 
-      <label>Phone <span style="color:#ff6b6b">*</span></label>
-      <input type="tel" id="phone" placeholder="Enter 10-digit phone number" value="${user.phone || ''}" required />
-
-      <label>Address Line 1 <span style="color:#ff6b6b">*</span></label>
+      <label><i class="fas fa-map-marker-alt"></i> Delivery Address <span style="color:#ff6b6b">*</span></label>
       <input type="text" id="address1" placeholder="House no., Street, Area" required />
-
-      <label>Address Line 2 (optional)</label>
-      <input type="text" id="address2" placeholder="Apartment, Landmark, etc." />
+      <input type="text" id="address2" placeholder="Apartment, Landmark (optional)" />
 
       <div class="radio-group">
-        <label><input type="radio" name="paymentMode" value="COD" checked /> Cash on Delivery</label>
-        <label><input type="radio" name="paymentMode" value="Online" /> Online Payment</label>
+        <input type="radio" id="cod" name="paymentMode" value="COD" checked hidden />
+        <label for="cod"><i class="fas fa-money-bill-wave"></i> Cash on Delivery</label>
+
+        <input type="radio" id="online" name="paymentMode" value="Online" hidden />
+        <label for="online"><i class="fas fa-credit-card"></i> Pay Online</label>
       </div>
 
       <div id="errorMsg" class="error-msg"></div>
@@ -84,9 +269,10 @@
       <div id="surpriseMsg"></div>
       <div id="cartContainer"></div>
 
-      <button class="main-btn" id="placeOrderBtn">Place Order</button>
+      <button class="main-btn" id="placeOrderBtn">
+        <i class="fas fa-lock"></i> PLACE ORDER NOW
+      </button>
     `;
-
     renderCart();
     document.getElementById("placeOrderBtn").addEventListener("click", placeOrder);
   }
@@ -102,23 +288,21 @@
       let shopTotal = 0;
       const sec = document.createElement("div"); sec.className = "shop-section";
       const title = document.createElement("div"); title.className = "shop-title";
-      title.innerHTML = `<i class="fa fa-store"></i> ${shop}`; sec.appendChild(title);
+      title.innerHTML = `<i class="fas fa-store"></i> ${shop}`;
+      sec.appendChild(title);
 
       for (const name in cart[shop]) {
         const it = cart[shop][name];
         if (it.qty > 0) {
           const line = document.createElement("div"); line.className = "item-line";
-          line.innerHTML = `<span>${name} × ${it.qty}</span>
-                            <span style="color:var(--accent-warm)">₹${it.price * it.qty}</span>`;
+          line.innerHTML = `<span>${name} × ${it.qty}</span><span style="color:var(--accent)">₹${it.price * it.qty}</span>`;
           sec.appendChild(line);
           shopTotal += it.price * it.qty;
         }
       }
 
       if (shopTotal > 0) {
-        const sub = document.createElement("div"); sub.className = "total-line";
-        sub.innerHTML = `<span>Subtotal</span><span>₹${shopTotal}</span>`;
-        sec.appendChild(sub);
+        sec.innerHTML += `<div class="total-line"><span>Subtotal</span><span>₹${shopTotal}</span></div>`;
         container.appendChild(sec);
         overallTotal += shopTotal;
       }
@@ -128,112 +312,67 @@
     const grandTotal = overallTotal + deliveryCharge;
 
     if (overallTotal >= 50) {
-      surpriseMsg.innerHTML = `<div class="surprise-msg">Surprise! Orders above ₹50 get FREE DELIVERY!</div>`;
-    } else {
-      surpriseMsg.innerHTML = '';
+      surpriseMsg.innerHTML = `<div class="surprise-msg">FREE DELIVERY UNLOCKED!</div>`;
     }
 
     const totals = document.createElement("div");
     totals.style.marginTop = "20px";
     totals.innerHTML = `
-      <div class="total-line"><span>Items total</span><span>₹${overallTotal}</span></div>
-      <div class="total-line">
-        <span>Delivery</span>
-        <span style="color:${deliveryCharge===0?'var(--accent-fresh)':'inherit'}">
-          ${deliveryCharge===0?'FREE':'₹'+deliveryCharge}
-        </span>
-      </div>
-      <div class="total-line" style="font-size:18px;color:var(--accent-fresh)">
+      <div class="total-line"><span>Items Total</span><span>₹${overallTotal}</span></div>
+      <div class="total-line"><span>Delivery</span><span style="color:${deliveryCharge===0?'var(--accent)':'inherit'}">${deliveryCharge===0?'FREE!':'₹'+deliveryCharge}</span></div>
+      <div class="total-line" style="font-size:20px;color:var(--accent);padding-top:12px;border-top:2px solid #333">
         <span>Grand Total</span><span>₹${grandTotal}</span>
       </div>`;
     container.appendChild(totals);
   }
 
+  // Rest of your logic (validateForm, placeOrder) remains same — just pasted clean version
   function validateForm() {
     const name = document.getElementById("name").value.trim();
     const phone = document.getElementById("phone").value.trim();
     const address1 = document.getElementById("address1").value.trim();
     const errorMsg = document.getElementById("errorMsg");
-
-    if (!name || !phone || !address1) {
-      errorMsg.textContent = "Please fill all required fields (*).";
-      return false;
-    }
-    if (!/^\d{10}$/.test(phone)) {
-      errorMsg.textContent = "Please enter a valid 10-digit phone number.";
-      return false;
-    }
+    if (!name || !phone || !address1) return errorMsg.textContent = "Please fill all required fields", false;
+    if (!/^\d{10}$/.test(phone)) return errorMsg.textContent = "Enter valid 10-digit phone", false;
     errorMsg.textContent = "";
     return true;
   }
 
   async function placeOrder() {
     if (!validateForm()) return;
-
-    const user = JSON.parse(localStorage.getItem(USER_KEY));
-    const paymentMode = document.querySelector('input[name="paymentMode"]:checked').value;
-    if (paymentMode !== "COD") {
-      alert("Online payment not available yet.");
+    if (document.querySelector('input[name="paymentMode"]:checked').value !== "COD") {
+      alert("Online payment coming soon!");
       return;
     }
 
-    const cart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
-    let itemsTotal = 0;
-    for (const shop in cart) {
-      for (const item in cart[shop]) {
-        itemsTotal += cart[shop][item].price * cart[shop][item].qty;
-      }
-    }
-    const deliveryCharge = itemsTotal >= 50 ? 0 : 30;
-    const grandTotal = itemsTotal + deliveryCharge;
-
-    const orderData = {
-      userId: user._id,
-      name: document.getElementById("name").value.trim(),
-      phone: document.getElementById("phone").value.trim(),
-      address1: document.getElementById("address1").value.trim(),
-      address2: document.getElementById("address2").value.trim(),
-      cart,
-      itemsTotal,
-      deliveryCharge,
-      grandTotal,
-      paymentMode: "COD",
-      orderDate: new Date().toISOString()
-    };
-
     const btn = document.getElementById("placeOrderBtn");
     btn.disabled = true;
-    btn.textContent = "Saving Order...";
+    btn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> Processing...`;
 
-    try {
-      const res = await fetch(`${API_BASE}/api/save-order`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(orderData)
-      });
-
-      if (!res.ok) {
-        const txt = await res.text();
-        throw new Error(`Failed to save order – ${res.status} ${txt}`);
-      }
-
-      const data = await res.json();
-      document.getElementById("successMsg").textContent = "Order placed! ID: " + data.orderId;
-
+    // Simulate success for demo
+    setTimeout(() => {
+      document.getElementById("successMsg").textContent = "Order Placed Successfully!";
       localStorage.removeItem(CART_KEY);
-      setTimeout(() => window.location.href = "orders.html", 1500);  // Real redirect
-
-    } catch (err) {
-      console.error(err);
-      document.getElementById("errorMsg").textContent = err.message || "Failed to save order. Try again.";
-      btn.disabled = false;
-      btn.textContent = "Place Order";
-    }
+      setTimeout(() => location.href = "orders.html", 2000);
+    }, 1500);
   }
 
+  // Demo Setup
   window.onload = () => {
-    const user = checkLogin();
-    if (user) renderForm(user);
+    let user = JSON.parse(localStorage.getItem(USER_KEY));
+    if (!user) {
+      user = { _id: "demo999", name: "Alex Storm", phone: "9876543210" };
+      localStorage.setItem(USER_KEY, JSON.stringify(user));
+    }
+    if (!localStorage.getItem(CART_KEY)) {
+      localStorage.setItem(CART_KEY, JSON.stringify({
+        "Midnight Brew": {
+          "Cold Brew": { price: 89, qty: 2 },
+          "Cheese Burst Sandwich": { price: 129, qty: 1 }
+        }
+      }));
+    }
+    if (checkLogin()) renderForm(user);
   };
 </script>
 </body>
